[package]
edition = "2021"
name = "msm-study"
version = "0.1.0"

[dependencies]
ark-std = {version = "0.3"}
ff = "0.13.0"
group = "0.13.0"
# halo2curves = {version = "0.5.0"}
halo2curves = {path = "../../privacy-scaling-explorations/halo2curves"}
num-bigint = "0.4.3"
num-integer = "0.1"
num-traits = "0.2"
rayon = "1.5.1"
subtle = "2.4"

[dev-dependencies]
criterion = "0.3"
rand = "0.8"
rand_core = {version = "0.6", default-features = false}
rand_xorshift = "0.3"

[features]
default = ["print-trace"]
print-trace = ["ark-std/print-trace"]
